Tusi Couple and lots of amazing stuffs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "vsintellicode.typescript.completionsEnabled": false,
     "javascript.suggest.classMemberSnippets.enabled": false,
-    "javascript.suggest.completeFunctionCalls": false
+    "javascript.suggest.completeFunctionCalls": false,
+    "editor.inlineSuggest.enabled": false
 }
